Define HAVE_X in config.h if X11 is present and not disabled using --without-x. Merged from trunk@410.

--- a/branches/0.9.4/configure.in.in
+++ b/branches/0.9.4/configure.in.in
@@ -40,7 +40,12 @@ AC_TYPE_PID_T
 AC_TYPE_SIZE_T
 AC_TYPE_UID_T
 AC_STRUCT_TM
+
 AC_PATH_X
+if test $have_x = yes; then
+   AC_DEFINE(HAVE_X,1,[Have X Window System])
+fi
+
 AC_HEADER_SYS_WAIT
 AC_TM_GMTOFF
 AC_FUNC_FORK
