--- a/branches/0.9.4-debian/debian/control
+++ b/branches/0.9.4-debian/debian/control
@@ -1,8 +1,8 @@
 Source: sim
 Section: net
-Priority: extra
-Maintainer: Murat Demirten <murat@debian.org>
-Build-Depends: debhelper (>> 4.0.0), flex, autoconf, automake1.9, autotools-dev, perl, libtool(>= 1.4.2-1), libfam-dev, libpng-dev, libqt3-mt-dev, libqt3-headers, libqt3-headers, qt3-dev-tools, libssl-dev, kdelibs4-dev, zlib1g-dev, libexpat1-dev, libxml2-dev, libxslt1-dev, libxft-dev, zip, g++
+Priority: optional
+Maintainer: Alexander Petrov <zowers@gmail.com>
+Build-Depends: debhelper (>> 4.0.0), flex, autoconf, automake1.9, autotools-dev, perl, libtool(>= 1.4.2-1), libfam-dev, libpng-dev, libqt3-mt-dev, libqt3-headers, libqt3-headers, qt3-dev-tools, libssl-dev, kdelibs4-dev, zlib1g-dev, libexpat1-dev, libxml2-dev, libxslt1-dev, libxft-dev, zip
 Standards-Version: 3.6.2.1
 
 Package: sim
@@ -28,7 +28,7 @@ Description: Simple Instant Messenger
   * Sending of the messages to several users;
   * Proxy: HTTP/HTTPS, SOCKS4, SOCKS5.
  .
-  Homepage: http://sim-im.berlios.de/
+  Homepage: http://sim-im.org/
  .
   This package is compiled with KDE support.
   See the 'kde' package for more information.
