--- a/branches/0.9.4-debian/debian/rules
+++ b/branches/0.9.4-debian/debian/rules
@@ -1,6 +1,10 @@
 #!/usr/bin/make -f
-# Sample debian/rules that uses debhelper.
-# GNU copyright 1997 to 1999 by Joey Hess.
+# sim-im debian/rules that uses debhelper.
+# Copyright (c) 2006 Alexander 'zowers' Petrov.
+
+# This file is based on:
+# # Sample debian/rules that uses debhelper.
+# # GNU copyright 1997 to 1999 by Joey Hess.
 
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
@@ -12,7 +16,6 @@ kdedocs = $(tmp)/usr/share/doc/kde/HTML
 
 stamps_to_clean = build-stamp
 files_to_clean = debian/debiandirs configure aclocal.m4 acinclude.m4 po/*gmo config.log config.status
-#files_to_clean = debian/debiandirs admin/config.sub admin/config.guess admin/ltmain.sh configure admin/libtool.m4.in aclocal.m4 acinclude.m4 po/*gmo
 dirs_to_clean = doc/en/HTML
 
 INSTALL_DIR = install -p -d -o root -g root -m 755
@@ -100,7 +103,10 @@ install: build
 
 	# Main install.
 	$(MAKE) install DESTDIR=`pwd`/$(tmp)
-	rm -f $(tmp)/usr/share/applications/sim/COPYING
+	rm -f $(tmp)/usr/share/apps/sim/COPYING
+	rm -f $(tmp)/usr/share/mimelnk/application/x-icq.desktop
+	rm -f $(tmp)/usr/lib/libsim.la
+	rm -f $(tmp)/usr/lib/sim/*.la
 
 	# Generate HTML docs.
 	for i in `find $(tmp) -name "*.docbook"`; do \
@@ -110,13 +116,14 @@ install: build
 	# Make common links for docs.
 	for i in `find $(kdedocs) -type d -name kbear`; do \
 	  ln -f -n -s ../common $$i/common ; done
-#	rm -f debian/sim/usr/share/menu/sim-kde.menu
-#	rm -f debian/sim/usr/bin/simctrl
-#	rm -f debian/sim/usr/share/applications/sim/COPYING
+
+	# rm -f debian/sim/usr/share/menu/sim-kde.menu
+	# rm -f debian/sim/usr/bin/simctrl
+	# rm -f debian/sim/usr/share/applications/sim/COPYING
 
 # Build architecture-independent files here.
 binary-indep: build install
-# We have nothing to do by default.
+	# We have nothing to do by default.
 
 # Build architecture-dependent files here.
 binary-arch: build install
@@ -124,16 +131,15 @@ binary-arch: build install
 	dh_testroot
 	dh_installdocs
 	dh_installmenu
-	dh_installmanpages
+	dh_installman
 	dh_installchangelogs ChangeLog
-	dh_installman -a debian/sim.3
+	dh_installman -a debian/sim.1
 	dh_link
 	dh_strip
 	dh_compress --exclude=.docbook --exclude=.bz2
 	dh_fixperms
 	dh_makeshlibs
 	dh_installdeb
-#	dh_perl
 	dh_shlibdeps
 	dh_gencontrol
 	dh_md5sums
