--- a/branches/0.9.4/plugins/remote/simext.vcproj
+++ b/branches/0.9.4/plugins/remote/simext.vcproj
@@ -62,6 +62,7 @@
 				ProgramDataBaseFileName=".\$(ConfigurationName)/"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
+				DisableSpecificWarnings="4996"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
