--- a/branches/0.9.4-debian/debian/control
+++ b/branches/0.9.4-debian/debian/control
@@ -2,7 +2,7 @@ Source: sim
 Section: net
 Priority: optional
 Maintainer: Alexander Petrov <zowers@gmail.com>
-Build-Depends: debhelper (>> 4.0.0), flex, autoconf, automake1.9, autotools-dev, perl, libtool(>= 1.4.2-1), libfam-dev, libpng12-dev, libqt3-mt-dev, libqt3-headers, qt3-dev-tools, libssl-dev, kdelibs4-dev, zlib1g-dev, libexpat1-dev, libxml2-dev, libxslt1-dev, libxft-dev, libxss-dev, zip
+Build-Depends: debhelper (>> 4.0.0), flex, autoconf, automake1.9, autotools-dev, perl, libtool(>= 1.5.2), libfam-dev, libpng12-dev, libqt3-mt-dev, libqt3-headers, qt3-dev-tools, libssl-dev, kdelibs4-dev, zlib1g-dev, libexpat1-dev, libxml2-dev, libxslt1-dev, libxft-dev, libxss-dev, zip
 Standards-Version: 3.6.2.1
 
 Package: sim
