--- a/branches/0.9.4-debian/debian/rules
+++ b/branches/0.9.4-debian/debian/rules
@@ -40,7 +40,7 @@ endif
 
 config.status: configure
 	dh_testdir
-	# Add here commands to configure the package.
+#   Add here commands to configure the package.
 	QTDIR=/usr/share/qt3 kde_appsdir=/usr/share/applications ./configure --disable-rpath --enable-openssl \
 	--enable-kde --prefix=/usr \
 	--mandir=\$${prefix}/share/man --infodir=\$${prefix}/share/info
@@ -67,8 +67,6 @@ build-stamp:
 	# Touch all the UI files.
 	# This will force uic to regenerate .h as well as .cpp sources;
 	# by default .cpp sources are regenerated but headers are not.
-	# This avoids a uic version skew that broke kbear with the Qt 3.3
-	# upgrade.
 	touch `find . -name "*.ui"`
 
 	$(MAKE)
@@ -95,7 +93,6 @@ install: build
 	$(INSTALL_DIR) $(pixmaps)
 	$(INSTALL_FILE) debian/sim.xpm $(pixmaps)
 	$(INSTALL_FILE) debian/sim-16.xpm $(pixmaps)
-#	$(INSTALL_FILE) debian/sim.menu debian/sim/usr/share/menu/sim
 
 	# Install overrides.
 	$(INSTALL_DIR) $(overrides)
@@ -117,13 +114,13 @@ install: build
 	  pushd . > /dev/null; cd `dirname $$i`; meinproc `basename $$i`; \
 	  popd > /dev/null; done
 
-	# rm -f debian/sim/usr/share/menu/sim-kde.menu
-	# rm -f debian/sim/usr/bin/simctrl
-	# rm -f debian/sim/usr/share/applications/sim/COPYING
+# rm -f debian/sim/usr/share/menu/sim-kde.menu
+# rm -f debian/sim/usr/bin/simctrl
+# rm -f debian/sim/usr/share/applications/sim/COPYING
 
 # Build architecture-independent files here.
 binary-indep: build install
-	# We have nothing to do by default.
+	# binary-indep - We have nothing to do by default.
 
 # Build architecture-dependent files here.
 binary-arch: build install
