update minizip to 1.01e, move qzip-related files to separate dir

--- a/trunk/sim/sim/Makefile.am
+++ b/trunk/sim/sim/Makefile.am
@@ -1,7 +1,7 @@
 bin_PROGRAMS = sim 
 lib_LTLIBRARIES = libsim.la
 
-SUBDIRS = png libltdl
+SUBDIRS = png libltdl qzip
 
 sim_SOURCES = sim.cpp \
  sim.rc
@@ -31,7 +31,6 @@ libsim_la_SOURCES = \
  qchildwidget.cpp \
  qcolorbutton.cpp \
  qkeybutton.cpp \
- qzip.cpp \
  sax.cpp \
  simapi.cpp \
  socket.cpp \
@@ -42,7 +41,6 @@ libsim_la_SOURCES = \
  translit.cpp \
  unquot.cpp \
  xsl.cpp \
- unzip.c \
  html.ll
 
 if QT_WIN
@@ -52,7 +50,7 @@ endif
 
 sim_LDADD = $(SIM_RC_OBJ) libsim.la
 sim_DEPENDENCIES = $(SIM_RC_OBJ)
-libsim_la_LIBADD   = $(LIBLTDL) $(LIB_QT) $(LIB_KDECORE) $(LIB_KDEUI) $(LIB_KFILE) $(EXTRA_LIBS) $(LIB_XML2) $(LIB_XSLT) $(LIBSSL)
+libsim_la_LIBADD = qzip/libqzip.la $(LIBLTDL) $(LIB_QT) $(LIB_KDECORE) $(LIB_KDEUI) $(LIB_KFILE) $(EXTRA_LIBS) $(LIB_XML2) $(LIB_XSLT) $(LIBSSL)
 
 EXTRA_DIST = \
 	sim-kde.menu \
