--- a/trunk/sim/plugins/_core/Makefile.am
+++ b/trunk/sim/plugins/_core/Makefile.am
@@ -89,7 +89,7 @@ INCLUDES=-I$(srcdir)/../../sim $(all_includes)
 
 _core_la_METASOURCES = AUTO
 _core_la_LIBADD = ../../sim/libsim.la  $(LIBUI) $(LIB_QT) $(LIB_KDECORE) $(LIB_KDEUI) $(LIB_KFILE) $(EXTRA_LIBS)  
-_core_la_LDFLAGS = -module -no-undefined -avoid-version -L../../sim/.libs $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
+_core_la_LDFLAGS = -module -no-undefined -avoid-version $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
 
 
 
