my last change was lost somehow

--- a/branches/branch-QString/plugins/_core/_core.vcproj
+++ b/branches/branch-QString/plugins/_core/_core.vcproj
@@ -78,6 +78,7 @@
 				AdditionalDependencies="$(QTDIR)\lib\$(QTLIB) $(QTDIR)\lib\qtmain.lib $(SolutionDir)$(ConfigurationName)\sim.lib odbc32.lib odbccp32.lib wsock32.lib winmm.lib User32.Lib AdvAPI32.Lib"
 				OutputFile="../../Release/plugins/_core.dll"
 				SuppressStartupBanner="true"
+				ImportLibrary="$(OutDir)\$(ProjectName).lib"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -174,6 +175,7 @@
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
 				GenerateDebugInformation="true"
+				ImportLibrary="$(OutDir)\$(ProjectName).lib"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -6330,7 +6332,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6340,7 +6342,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6354,7 +6356,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6364,7 +6366,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6378,7 +6380,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6388,7 +6390,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6402,7 +6404,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6412,7 +6414,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6426,7 +6428,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6436,7 +6438,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6450,7 +6452,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6460,7 +6462,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6474,7 +6476,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6484,7 +6486,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6498,7 +6500,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6508,7 +6510,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6522,7 +6524,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6532,7 +6534,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6546,7 +6548,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6556,7 +6558,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6570,7 +6572,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6580,7 +6582,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6593,7 +6595,7 @@
 					>
 					<Tool
 						Name="VCCustomBuildTool"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6602,7 +6604,7 @@
 					>
 					<Tool
 						Name="VCCustomBuildTool"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6616,7 +6618,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6626,7 +6628,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6640,7 +6642,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6650,7 +6652,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6664,7 +6666,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6674,7 +6676,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6688,7 +6690,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6698,7 +6700,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6712,7 +6714,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6722,7 +6724,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6736,7 +6738,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6746,7 +6748,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
