--- a/trunk/admin/acinclude.m4.in
+++ b/trunk/admin/acinclude.m4.in
@@ -786,7 +786,7 @@ support])
    # CoreAudio framework
    AC_CHECK_HEADER(CoreAudio/CoreAudio.h, [
      AC_DEFINE(HAVE_COREAUDIO, 1, [Define if you have the CoreAudio API])
-     FRAMEWORK_COREAUDIO="-Xlinker -framework -Xlinker CoreAudio"
+     FRAMEWORK_COREAUDIO="-Wl,-framework,CoreAudio"
    ])
 
    AC_CHECK_RES_INIT
@@ -3075,8 +3075,8 @@ AC_DEFUN([KDE_CHECK_FOR_OPT_NOINLINE_MATCH],
   [
   kde_cv_opt_noinline_match=irrelevant
   dnl if we don't use both -O2 and -fno-inline, this check is moot
-  if echo "$CFLAGS" | grep -qe -O2 \
-     && echo "$CFLAGS" | grep -qe -fno-inline ; then
+  if echo "$CFLAGS" | grep -e -O2 >/dev/null 2>/dev/null \
+     && echo "$CFLAGS" | grep -e -fno-inline >/dev/null 2>/dev/null ; then
 
     ac_cflags_save="$CFLAGS"
     CFLAGS="$CFLAGS -D_USE_GNU"
@@ -3553,7 +3553,7 @@ AC_DEFUN([KDE_CHECK_LIB64],
 [
     kdelibsuff="$kde_libs_suffix"
     if test -z "$kdelibsuff"; then
-       kdelibsuff="auto"
+       kdelibsuff="no"
     fi
     AC_ARG_ENABLE(libsuffix,
         AC_HELP_STRING([--enable-libsuffix],
@@ -3568,13 +3568,16 @@ int main() {
  return 0;
 }
 EOF
-        kdelibsuff=`$CC conftest.c -o conftest.out; ldd conftest.out | grep -E "libc.so"| grep -E -o "/lib[[^\/]]*/" | sed "s/lib//" | sed "s/\/*//g"`
+        kdelibsuff=`$CC conftest.c -o conftest.out; ldd conftest.out |sed -ne '/libc.so/{
+    s,.*/lib\([[^\/]]*\)/.*,\1, 
+    p 
+}'`
 	rm -rf conftest.*
     fi	
 	
-    if test "$kdelibsuff" = "no"; then
+    if test "$kdelibsuff" = "no" || test "$kdelibsuff" = "none"; then
        kdelibsuff=
-    fi    
+    fi
     if test -z "$kdelibsuff"; then
         AC_MSG_RESULT([not using lib directory suffix])
         AC_DEFINE(KDELIBSUFF, [""], Suffix for lib directories)
@@ -5064,7 +5067,7 @@ AC_DEFUN([KDE_SET_PREFIX],
                     ])
   fi
   kde_libs_htmldir=`$KDECONFIG --install html --expandvars`
-  kde_libs_suffix=`$KDECONFIG --libsuffix`
+  kde_libs_suffix=`$KDECONFIG --libsuffix` || kde_libs_suffix=auto
 
   AC_MSG_CHECKING([where to install])
   if test "x$prefix" = "xNONE"; then
@@ -5440,7 +5443,7 @@ elif test -d "/Library/Java/Home"; then
   JAVAC=$kde_java_bindir/javac
   JAVAH=$kde_java_bindir/javah
   JAR=$kde_java_bindir/jar
-  JVMLIBS="-Xlinker -framework -Xlinker JavaVM"
+  JVMLIBS="-Wl,-framework,JavaVM"
 
   AC_DEFINE_UNQUOTED(PATH_JAVA, "$kde_java_bindir/java", [Define where your java executable is])
   AC_MSG_RESULT([Apple Java Framework])
